# TVSwitcher

./: .clang-format  CMakeLists.txt  TVState.cpp  TVState.h  analyzer.py  install.sh.in  main.cpp  main.h
